<resources>
    <string name="app_name">WeChat</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_0">0</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_9">9</string>
    <string name="btn_8">8</string>
    <string name="btn_7">7</string>
    <string name="btn_dian">.</string>
    <string name="btn_del">DEL</string>
    <string name="btn_C">C</string>
    <string name="btn_chu">/</string>
    <string name="btn_cheng">*</string>
    <string name="btn_jia">+</string>
    <string name="btn_deng">=</string>

    <string name="btn_d">登录</string>
    <string name="btn_g">个人信息</string>
    <string name="btn_c1">传递简单值1</string>
    <string name="btn_c2">传递简单值2</string>
    <string name="btn_cs">传递数组</string>
    <string name="btn_cd">传递对象</string>
    <string name="btn_cz">传递对象数组</string>
    <string name="btn_cf">传递并返回</string>
    <string name="btn_da">打电话</string>
    <string name="btn_fd">发短信</string>
    <string name="btn_fy">发送邮件</string>
    <string name="btn_dw">调用网页</string>
    <string name="btn_ql">启动闹钟</string>
    <string name="btn_qd">启动定时器</string>
    <string name="btn_xl">显示闹钟</string>
    <string name="btn_zq">Activity生命周期</string>
    <string name="btn_w">微信</string>
    <string name="btn_tong">通讯录</string>
    <string name="btn_fa">发现</string>
    <string name="btn_wo">我</string>
    <string name="btn_add">+</string>
    <string name="btn_f">发起群聊</string>
    <string name="btn_ti">添加朋友</string>
    <string name="btn_sao">扫一扫</string>
    <string name="btn_sh">收付款</string>
    <string name="btn_bang">帮助与反馈</string>
    <string name="btn_xiao">消息</string>
    <string name="btn_ni">昵称</string>
    <string name="btn_qing">请输入姓名</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jin">进入评估</string>
    <string name="tui">退出</string>
    <string name="you">有</string>
    <string name="mei">没有</string>
    <string name="sou">搜索</string>
</resources>
